2010-08-20  Zhenyao Mo  <zmo@google.com>

        Reviewed by Kenneth Russell.

        WebGL must enforce restrictions even if running on OpenGL ES 2.0
        https://bugs.webkit.org/show_bug.cgi?id=42908

        * public/WebGraphicsContext3D.h: Add two new flags.
        * src/GraphicsContext3D.cpp: Ditto.
        (WebCore::GraphicsContext3DInternal::isGLES2NPOTStrict):
        (WebCore::GraphicsContext3DInternal::isErrorGeneratedOnOutOfBoundsAccesses):
        (WebCore::GraphicsContext3D::isGLES2NPOTStrict):
        (WebCore::GraphicsContext3D::isErrorGeneratedOnOutOfBoundsAccesses):
        * src/WebGraphicsContext3DDefaultImpl.cpp: Ditto.
        (WebKit::WebGraphicsContext3DDefaultImpl::isGLES2NPOTStrict):
        (WebKit::WebGraphicsContext3DDefaultImpl::isErrorGeneratedOnOutOfBoundsAccesses):
        * src/WebGraphicsContext3DDefaultImpl.h: Ditto.

2010-08-24  Zhenyao Mo  <zmo@google.com>

        Reviewed by Kenneth Russell.

        Passing premultiplyAlpha=false to tex{Sub}Image2D loses information (skia)
        https://bugs.webkit.org/show_bug.cgi?id=38282

        * src/WebImageDecoder.cpp:
        (WebKit::WebImageDecoder::init): Add premultiplyAlpha flag.

2010-08-25  Satish Sampath  <satish@chromium.org>

        Reviewed by Jeremy Orlow.

        Pass the element's bounds to embedder during speech recognition.
        https://bugs.webkit.org/show_bug.cgi?id=44427

        * public/WebSpeechInputController.h:
        (WebKit::WebSpeechInputController::startRecognition):
        (WebKit::WebSpeechInputController::cancelRecognition):
        (WebKit::WebSpeechInputController::stopRecording):
        * src/SpeechInputClientImpl.cpp:
        (WebKit::SpeechInputClientImpl::startRecognition):
        * src/SpeechInputClientImpl.h:
        * src/WebSpeechInputControllerMockImpl.cpp:
        (WebKit::WebSpeechInputControllerMockImpl::startRecognition):
        * src/WebSpeechInputControllerMockImpl.h:

2010-08-25  Pawel Hajdan  <phajdan.jr@chromium.org>